Agregados assets para ejercicios de AR

--- a/_posts/2018-08-26-ejercicios-ar.html
+++ b/_posts/2018-08-26-ejercicios-ar.html
@@ -37,7 +37,7 @@ type: draft
 
     <script>
         var contentDiv = document.getElementById("content");
-        main.buildHtmlAsync('http://localhost:3000/', 'exercises.json').then(() => {
+        main.buildHtmlAsync('/assets/', 'exercises.json').then(() => {
             //After document is built
         })
 
