--- a/_posts/2018-08-26-ejercicios-ar.html
+++ b/_posts/2018-08-26-ejercicios-ar.html
@@ -10,66 +10,39 @@ type: draft
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <div id="content">
-        <div class="row">
-            <div class="col-2">
-                <ul class="nav flex-column" data-ra-type="content">
-                    <li class="nav-item" name="excercise" data-ra-type="exercise">
-                        <a data-ra-type="exerciseTitle" data-toggle="tab" href="#tab{id}"></a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="tab-content col-10" data-ra-type="content">
-                <div class="tab-pane active">Seleccione un ejercicio</div>
-                <div class="tab-pane" id="tab{id}" data-ra-type="exercise">
-                    <h2 data-ra-type="exerciseTitle"></h2>
-                    <h4 data-ra-type="exerciseDescription"></h4>
-                    <textarea class='form-control' name='raExercise' data-ra-type="raExpression"></textarea>
-                    <input type='button' value='Run' data-ra-type="run" onclick='runExpression(this);'>
-                    <div data-ra-type="result" name="result"></div>
+   <div data-ra-type="content" class="container-fluid">
+    <div data-ra-type="exercise" id="accordion">
+        <h4 data-ra-type="exerciseTitle"></h2>
+        <p data-ra-type="exerciseDescription">Dado el siguiente esquema de relacion:</p>
+        <pre data-ra-type="tables"></pre>
+        <div data-ra-type="statementList">
+            <div class="card" data-ra-type="statement">
+                <div class="card-header" id="heading{statementId}">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{statementId}" aria-expanded="true" 
+                    aria-controls="collapseOne" data-ra-type="statementTitle"></button>
+                </h5>
+                </div>
+            
+                <div id="collapse{statementId}" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div class="card-body">
+                        <div data-ra-type="statementDescription"></div>
+                        <p>Resultado Esperado:</p>
+                        <div data-ra-type="expected" name="expected"></div>
+                        <textarea class='form-control' name='raExercise' data-ra-type="raExpression"></textarea>
+                        <input type='button' value='Ejecutar' data-ra-type="run">
+                        <div data-ra-type="result" name="result"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+<script src="/assets/ar/main.js" type="text/javascript"></script>
+<script>
+    var contentDiv = document.getElementById("content");
+    main.buildHtmlAsync('/assets/ar/', 'exercises.json').then(() => {
+        //After document is built
+    })
+</script>
 
-<script src="/assets/main.js" type="text/javascript"></script>
-
-    <script>
-        var contentDiv = document.getElementById("content");
-        main.buildHtmlAsync('/assets/', 'exercises.json').then(() => {
-            //After document is built
-        })
-
-        function runExpression(element){
-            var exId = element.dataset.excerciseId;
-            var raExpression = element.parentElement.querySelector("[name='raExercise']")
-            var result = main.runExpression(exId, raExpression.value);
-
-            var resultControl = element.parentElement.querySelector("[name='result']");
-            printResult(resultControl, result);
-        }
-
-        function printResult(outputElm, results){
-            outputElm.innerHTML = "";
-            for (var i=0; i<results.length; i++) {
-                outputElm.appendChild(tableCreate(results[i].columns, results[i].values));
-            }
-        }
-
-        var tableCreate = function () {
-            function valconcat(vals, tagName) {
-                if (vals.length === 0) return '';
-                var open = '<'+tagName+'>', close='</'+tagName+'>';
-                return open + vals.join(close + open) + close;
-            }
-            return function (columns, values){
-                var tbl  = document.createElement('table');
-                var html = '<thead>' + valconcat(columns, 'th') + '</thead>';
-                var rows = values.map(function(v){ return valconcat(v, 'td'); });
-                html += '<tbody>' + valconcat(rows, 'tr') + '</tbody>';
-                tbl.innerHTML = html;
-                return tbl;
-            }
-        }();
-    </script>
